1.1
	+ Show status for non-internal VPN daemons in dashboard
0.12.100
        + Daemon names are restricted to alphanumerics and '-'. '_', '.'
	characters
	+ Bugfix: servers and clients cannto get any longer the same
	interface number
	+ Added log rotation using logrotate
0.12.99
	+ New release
0.12
	+ Adapt ebox-openvpn to MVC framework
	+ Bugfix: Enforcing RIPv2 to always authenticate when using eBox
	tunnels
0.11.103
	+ Bugfix. Quote certificate file names with double quote to
	  fix bug in win32
0.11.102
	+ Bugfix. Quote certifacte file names to support spaces
0.11.101
	+ Fix typo in CreateClient
	+ Do not remove quagga and openVPN rc links
	+ Bugfix. Retrieve rip password in server configuration
	+ Bugfix. Allow user to remove rip password when disabling ebox-to-ebox
	  tunnel
	+ Add backwards compatibility with old openVPN tunnels
	+ Make removed daemons deletion more robust
	+ Bugfix. Get activeServers instead of activeDaemons to add
	  INPUT rules
	+ Removed duplicate pmasquerade firewall rules, input rules to
	server more restrictive with input interface
0.11.100
	+ Bugfix. rip password is not required for normal clients
	+ Add feature to allow masquerading in VPNs. Now you can use the
	  openVPN module with just one interface.
0.11.99
	+ Bugfix. Shorten reserved daemons prefix to enlarge the daemon name
	user choice from RESERVED_DAEMON_ to R_D_
0.11
	+ Bugfix. Allow RIP connections on tap interfaces
	+ Bugfix. Log timestamp with one-digit day
0.10.99
	+ Windows bundle can be created to include the openVPN windows installer
	+ Log openVPN status
	+ Treat openVPN like internal interfaces
0.10.99
	+ New release
	+ added  log facilities
	+ client certificates and key validation
0.10
	+ Fix issue with www server to guess IP
	+ Improvements on port availability
	+ Only announce routes for RFC1918
	+ Relax checking of advertised routes
	+ Do not downgrade privileges from root to another user/group to avoid
	  problems when reconnecting
0.9.100